testsuite/tests/typecheck/should_fail/T5853.stderr

T5853.hs:15:46: error:
    • Could not deduce: Subst t (Elem t2) ~ t2
        arising from a use of ‘<$>’
      from the context: (F t1,
                         Elem t1 ~ Elem t1,
                         Elem t2 ~ Elem t2,
                         Subst t1 (Elem t2) ~ t2,
                         Subst t2 (Elem t1) ~ t1,
                         F t,
                         Elem t ~ Elem t,
                         Elem t1 ~ Elem t1,
                         Subst t (Elem t1) ~ t1,
                         Subst t1 (Elem t) ~ t)
        bound by the RULE "map/map" at T5853.hs:15:2-57
      ‘t2’ is a rigid type variable bound by
        the RULE "map/map" at T5853.hs:15:2
    • In the expression: (f . g) <$> xs
      When checking the transformation rule "map/map"
    • Relevant bindings include
        f :: Elem t1 -> Elem t2 (bound at T5853.hs:15:19)
        g :: Elem t -> Elem t1 (bound at T5853.hs:15:21)
        xs :: t (bound at T5853.hs:15:23)
